Write Like model docs for POST/DELET
